# stoffel-python-sdk

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  correct_flow.py  simple_api_demo.py  vm_example.py
stoffel/: __init__.py  client.py  program.py
stoffel/compiler/: __init__.py  compiler.py  exceptions.py  program.py
stoffel/mpc/: __init__.py  types.py
stoffel/vm/: __init__.py  exceptions.py  types.py  vm.py
tests/: __init__.py  test_client.py  test_vm.py
