[tool.poetry]
name = "stoffel-python-sdk"
version = "0.1.0"
description = "Python SDK for StoffelVM and MPC protocols"
authors = ["Stoffel Labs"]
readme = "README.md"
packages = [{include = "stoffel"}]

[tool.poetry.dependencies]
python = "^3.8"
cffi = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true